# Klyra

./: .all-contributorsrc  .dockerignore  .env  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  DEVELOPING.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  Makefile.toml  README.md  cliff.toml  docker-bake.hcl  docker-compose.dev.yml  docker-compose.yml  install.ps1  install.sh
.cargo/: audit.toml
api-client/: Cargo.toml
api-client/src/: lib.rs  util.rs
auth/: Cargo.toml  README.md  integration.sh  integration_docker.sh
auth/src/: args.rs  error.rs  lib.rs  main.rs  router.rs  subscription.rs  user.rs
auth/src/api/: builder.rs  handlers.rs
auth/tests/api/: auth.rs  helpers.rs  session.rs  users.rs
auth/tests/api/stripe/: cancelledpro_checkout_session.rs  completed_checkout_session.rs
builder/: Cargo.toml  integration.sh
builder/src/: lib.rs  main.rs
builder/templates/: cargo-chef.Dockerfile  rust.Dockerfile.jinja2
builder/tests/: integration_tests.rs  rust.Dockerfile
common-tests/: Cargo.toml
common-tests/src/: builder.rs  cargo_klyra.rs  lib.rs  logger.rs  permit_pdp.rs  postgres.rs  provisioner.rs  resource_recorder.rs
deployer/: Cargo.toml  README.md  build.rs  integration.sh  prepare.sh
deployer/migrations/: 0004_change_service_id_to_ulid.sql
deployer/src/: args.rs  error.rs  handlers.rs  lib.rs  main.rs  persistence.rs  proxy.rs  runtime_manager.rs
deployer/src/deployment/: deploy_layer.rs  gateway_client.rs  log.rs  mod.rs  provisioner_factory.rs  queue.rs  run.rs  runtime_logger.rs  state_change_layer.rs
deployer/src/handlers/: deployment.rs  error.rs  local.rs  mod.rs  project.rs
deployer/src/persistence/: deployment.rs  log.rs  mod.rs  secret.rs  service.rs  state.rs
deployer/src/persistence/resource/: database.rs  mod.rs
deployer/tests/: integration_run.rs
deployer/tests/deploy_layer/bind-panic/: Cargo.toml
deployer/tests/deploy_layer/main-panic/: Cargo.toml
deployer/tests/deploy_layer/main-panic/src/: main.rs
deployer/tests/deploy_layer/self-stop/: Cargo.toml
deployer/tests/deploy_layer/self-stop/src/: lib.rs  main.rs
deployer/tests/deploy_layer/sleep-async/: Cargo.toml
deployer/tests/resources/bind-panic/: Cargo.toml
deployer/tests/resources/load-panic/: Cargo.toml
deployer/tests/resources/main-panic/: Cargo.toml
deployer/tests/resources/sleep-async/: Cargo.toml
deployer/tests/resources/tests-fail/: Cargo.toml
deployer/tests/resources/tests-pass/: Cargo.toml
logger/: Cargo.toml  integration_docker.sh
logger/migrations/: 0000_init.sql
logger/src/: dal.rs  lib.rs  main.rs
logger/tests/: helpers.rs  integration_tests.rs
next/: Cargo.toml  README.md
next/src/: error.rs  main.rs
proto/: Cargo.toml  README.md  integration.sh
proto/src/: lib.rs
resource-recorder/: Cargo.toml  integration.sh
resource-recorder/src/: dal.rs  lib.rs  main.rs
resource-recorder/tests/: integration.rs  integration_tests.rs
resources/aws-rds/: Cargo.toml  README.md
resources/aws-rds/src/: lib.rs
resources/metadata/: Cargo.toml  README.md
resources/metadata/src/: lib.rs
resources/openai/: Cargo.toml
resources/openai/src/: lib.rs
resources/opendal/: Cargo.toml  README.md
resources/opendal/src/: lib.rs
resources/persist/: .gitignore  Cargo.toml  README.md
resources/persist/src/: lib.rs
resources/qdrant/: Cargo.toml
resources/qdrant/src/: lib.rs
resources/secrets/: Cargo.toml  README.md
resources/secrets/src/: lib.rs
resources/service-info/: Cargo.toml  README.md
resources/service-info/src/: lib.rs
resources/static-folder/: Cargo.toml  README.md
resources/static-folder/src/: lib.rs
runtime/: Cargo.toml  Makefile  README.md  developing.md  integration.sh
runtime/src/: alpha.rs  beta.rs  lib.rs  logger.rs  main.rs  plugins.rs  provisioner_factory.rs  resource_tracker.rs  rt.rs  start.rs  telemetry.rs  trace.rs
runtime/src/alpha/: args.rs  mod.rs
runtime/src/axum/: mod.rs
runtime/src/legacy/: error.rs  mod.rs
runtime/src/next/: mod.rs
runtime/tests/integration/: helpers.rs  loader.rs
runtime/tests/resources/axum-wasm-expanded/: Cargo.toml
runtime/tests/resources/bind-panic/: Cargo.toml
runtime/tests/resources/bind-panic-owned/: Cargo.toml
runtime/tests/resources/loader-panic/: Cargo.toml
runtime/tests/resources/loader-panic-owned/: Cargo.toml
runtime/tests/resources/main-panic/: Cargo.toml
service/: Cargo.toml  integration.sh
service/src/: builder.rs  error.rs  lib.rs  loader.rs  logger.rs  persist.rs  runner.rs
service/tests/: build_crate.rs  loader.rs
service/tests/helpers/: mod.rs
service/tests/integration/: build_crate.rs  loader.rs
service/tests/integration/helpers/: loader.rs  sqlx.rs
service/tests/resources/bind-panic/: Cargo.toml
service/tests/resources/build-panic/: Cargo.toml
service/tests/resources/is-bin/: Cargo.toml
service/tests/resources/is-cdylib/: Cargo.toml
service/tests/resources/not-bin/: Cargo.toml
service/tests/resources/not-cdylib/: Cargo.toml
service/tests/resources/not-klyra/: Cargo.toml
service/tests/resources/sleep/: Cargo.toml
service/tests/resources/sleep-async/: Cargo.toml
service/tests/resources/sqlx-pool/: Cargo.toml
services/klyra-actix-web/: Cargo.toml  README.md
services/klyra-actix-web/src/: lib.rs
services/klyra-axum/: Cargo.toml  README.md
services/klyra-axum/src/: lib.rs
services/klyra-next/: Cargo.toml
services/klyra-next/src/: lib.rs
services/klyra-poem/: Cargo.toml  README.md
services/klyra-poem/src/: lib.rs
services/klyra-poise/: Cargo.toml  README.md
services/klyra-poise/src/: lib.rs
services/klyra-rama/: Cargo.toml  README.md
services/klyra-rama/src/: lib.rs
services/klyra-rocket/: Cargo.toml  README.md
services/klyra-rocket/src/: lib.rs
services/klyra-salvo/: Cargo.toml  README.md
services/klyra-salvo/src/: lib.rs
services/klyra-serenity/: Cargo.toml  README.md
services/klyra-serenity/src/: lib.rs
services/klyra-thruster/: Cargo.toml  README.md
services/klyra-thruster/src/: lib.rs
(+406 files in other folders)
