[package]
name = "klyra-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-datadog = { workspace = true }
tokio = { version = "1.22.0", features = [ "full" ] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dependencies.klyra-common]
workspace = true
features = ["backend"]
