[package]
name = "klyra-common-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
cargo-klyra = { path = "../cargo-klyra" }
klyra-proto = { workspace = true, features = ["builder", "logger", "resource-recorder"] }

hyper = { workspace = true }
portpicker = { workspace = true }
reqwest = { workspace = true }
klyra-common = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
