[package]
name = "klyra-logger"
version = "0.30.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
prost-types = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "chrono",
    "json",
    "migrate",
    "runtime-tokio-rustls",
    "postgres",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["default"] }

[dependencies.klyra-common]
workspace = true
features = ["backend", "tonic"]

[dependencies.klyra-proto]
workspace = true

[dev-dependencies]
once_cell = { workspace = true }
portpicker = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
klyra-common-tests = { workspace = true }
uuid = { workspace = true }
ctor = { workspace = true }
