[package]
name = "klyra-resource-recorder"
version = "0.51.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
klyra-backends = { workspace = true }
klyra-common = { workspace = true, features = ["extract_propagation", "tonic", "sqlx"] }
klyra-proto = { workspace = true, features = ["resource-recorder"] }

async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
prost-types = { workspace = true }
sqlx = { workspace = true, features = ["chrono", "migrate", "sqlite"] }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["default"] }
ulid = { workspace = true }

[dev-dependencies]
portpicker = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
klyra-backends = { workspace = true, features = ["test-utils"] }
klyra-common-tests = { workspace = true }
