[package]
name = "klyra-runtime"
version = "0.34.1"
edition.workspace = true
license.workspace = true
description = "Runtime to start and manage any service that runs on klyra"

[[bin]]
name = "klyra-next"
required-features = ["next"]

[lib]
doctest = false

[dependencies]
klyra-codegen = { workspace = true, features = ["frameworks"] }
klyra-common = { workspace = true, features = ["backend", "claims"] }
klyra-proto = { workspace = true, features = ["provisioner", "runtime"] }
klyra-service = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
cap-std = { version = "2.0.0", optional = true }
chrono = { workspace = true }
colored = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
prost-types = { workspace = true }
rmp-serde = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
strfmt = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
wasi-common = { version = "13.0.0", optional = true }
wasmtime = { version = "13.0.0", optional = true }
wasmtime-wasi = { version = "13.0.0", optional = true }

[dev-dependencies]
portpicker = "0.1.1"
futures = { workspace = true }
klyra-service = { workspace = true, features = ["builder", "runner"] }
uuid = { workspace = true }

[features]
default = ["setup-tracing"]

next = [
    "cap-std",
    "futures",
    "hyper/server",
    "rmp-serde",
    "futures",
    "wasi-common",
    "wasmtime",
    "wasmtime-wasi",
    "klyra-common/wasm",
]
setup-tracing = [
    "tracing-subscriber/default",
    "tracing-subscriber/env-filter",
    "colored",
]
