[package]
name = "klyra-runtime"
version = "0.44.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime to start and manage any service that runs on klyra"

[lib]
doctest = false

[dependencies]
klyra-codegen = { workspace = true }
klyra-common = { workspace = true, features = ["extract_propagation"] }
klyra-proto = { workspace = true, features = ["runtime"] }
klyra-service = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
colored = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
strfmt = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7.10"
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
portpicker = "0.1.1"
klyra-service = { workspace = true, features = ["builder", "runner"] }
klyra-proto = { workspace = true, features = ["provisioner"] }
uuid = { workspace = true }

[features]
default = ["setup-tracing"]

setup-tracing = [
    "tracing-subscriber/default",
    "tracing-subscriber/env-filter",
    "colored",
]
