[package]
name = "klyra-runtime"
version = "0.50.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime to run a service on the Klyra platform"

[lib]
doctest = false

[dependencies]
klyra-api-client = { workspace = true }
klyra-codegen = { workspace = true }
klyra-common = { workspace = true, features = ["extract_propagation"] }
klyra-proto = { workspace = true, features = ["runtime"] }
klyra-service = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
hyper = { workspace = true, features = ["http1", "server", "tcp"] }
serde = { workspace = true }
serde_json = { workspace = true }
strfmt = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
portpicker = { workspace = true }
klyra-service = { workspace = true, features = ["builder", "runner"] }
klyra-proto = { workspace = true, features = ["provisioner"] }
uuid = { workspace = true }

[features]
default = ["setup-tracing"]
api-client-tracing = ["klyra-api-client/tracing"]

setup-tracing = [
    "tracing-subscriber/default",
    "tracing-subscriber/env-filter",
]
