[package]
name = "klyra-service"
version = "0.48.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The core traits for running services on Klyra (https://www.klyra.rs/)"
homepage = "https://www.klyra.rs"

[lib]
doctest = false

[dependencies]
klyra-common = { workspace = true, features = [
    "service",
    "tracing",
] }
klyra-proto = { workspace = true, optional = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
cargo_metadata = { workspace = true, optional = true }
dunce = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
strfmt = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
default = []

builder = [
    "cargo_metadata",
    "tokio/process",
    "tokio/io-util",
    "tokio/sync",
    "tokio/time",
    "toml",
    "tracing",
]
runner = ["klyra-proto/runtime-client", "tokio/process", "dunce"]
