[package]
name = "klyra-service"
version = "0.55.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The core traits for running services on Klyra (klyra.dev)"
homepage = "https://www.klyra.dev"

[dependencies]
klyra-common = { workspace = true, features = ["models"] }

anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
strfmt = { workspace = true }
thiserror = { workspace = true }
