[package]
name = "klyra-aws-rds"
version = "0.16.0"
edition = "2021"
license = "Apache-2.0"
description = "Plugin to provision AWS RDS resources"
keywords = ["klyra-service", "rds"]

[dependencies]
async-trait = "0.1.56"
paste = "1.0.7"
serde = { version = "1.0.148", features = ["derive"] }
klyra-service = { path = "../../service", version = "0.16.0", default-features = false }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls"] }

[features]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
mariadb = ["sqlx/mysql"]
