[package]
name = "klyra-metadata"
version = "0.25.0"
edition = "2021"
license = "Apache-2.0"
description = "Plugin to get Klyra service information"
keywords = ["klyra-service", "metadata"]

[dependencies]
async-trait = "0.1.56"
serde = { version = "1.0.0", features = ["derive"] }
klyra-service = { path = "../../service", version = "0.25.0" }
