[package]
name = "klyra-openai"
version = "0.51.0"
edition = "2021"
license = "Apache-2.0"
description = "Klyra plugin for connecting to OpenAI"
repository = "https://github.com/klyra-hq/klyra"
keywords = ["klyra-service", "openai"]

[dependencies]
async-openai = "0.23.0"
async-trait = "0.1.56"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1"
klyra-service = { path = "../../service", version = "0.51.0" }
