[package]
name = "klyra-opendal"
version = "0.46.0"
edition = "2021"
license = "Apache-2.0"
description = "Plugin to obtain a client connected to Apache OpenDAL"
repository = "https://github.com/klyra-hq/klyra"
keywords = ["klyra-service", "opendal"]

[dependencies]
async-trait = "0.1.56"
opendal = "0.45"
serde = { version = "1", features = ["derive"] }
klyra-service = { path = "../../service", version = "0.46.0" }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
