[package]
name = "klyra-persist"
version = "0.19.0"
edition = "2021"
license = "Apache-2.0"
description = "Plugin for persist objects"
keywords = ["klyra-service", "persistence"]

[dependencies]
async-trait = "0.1.56"
bincode = "1.2.1"
serde = { version = "1.0.0", features = ["derive"] }
klyra-service = { path = "../../service", version = "0.19.0" }
thiserror = "1.0.32"
