[package]
name = "klyra-persist"
version = "0.49.0"
edition = "2021"
license = "Apache-2.0"
description = "Plugin for persist objects"
repository = "https://github.com/klyra-hq/klyra"
keywords = ["klyra-service", "persistence"]

[dependencies]
async-trait = "0.1.56"
bincode = "1.2.1"
serde = { version = "1", features = ["derive"] }
klyra-service = { path = "../../service", version = "0.49.0" }
thiserror = "2"
