[package]
name = "klyra-qdrant"
version = "0.36.0"
edition = "2021"
license = "Apache-2.0"
description = "Klyra plugin for connecting to a Qdrant database"
keywords = ["klyra-service", "qdrant"]

[dependencies]
async-trait = "0.1.56"
qdrant-client = "1.7.0"
serde = { version = "1.0.148", features = ["derive"] }
klyra-service = { path = "../../service", version = "0.36.0" }
