[package]
name = "klyra-secrets"
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"
description = "Plugin to for managing secrets on klyra"
keywords = ["klyra-service", "secrets"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
klyra-service = { path = "../../service", version = "0.9.0", default-features = false }
tokio = { version = "1.19.2", features = ["rt"] }
