[package]
name = "klyra-secrets"
version = "0.34.1"
edition = "2021"
license = "Apache-2.0"
description = "Plugin to for managing secrets on klyra"
keywords = ["klyra-service", "secrets"]

[dependencies]
async-trait = "0.1.56"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.148", features = ["derive"] }
klyra-service = { path = "../../service", version = "0.34.1" }
