[package]
name = "klyra-static-folder"
version = "0.25.0"
edition = "2021"
license = "Apache-2.0"
description = "Plugin to get a static folder at runtime on klyra"
keywords = ["klyra-service", "static-folder"]

[dependencies]
async-trait = "0.1.56"
dunce = "1.0.3"
fs_extra = "1.3.0"
serde = { version = "1.0.148", features = ["derive"] }
klyra-service = { path = "../../service", version = "0.25.0" }
tracing = "0.1.37"

[dev-dependencies]
tempfile = "3.3.0"
tokio = { version = "1.22.0", features = ["macros", "rt"] }
