[package]
name = "klyra-static-folder"
version = "0.26.0"
edition = "2021"
license = "Apache-2.0"
description = "Plugin to get a static folder at runtime on klyra"
keywords = ["klyra-service", "static-folder"]

[dependencies]
async-trait = "0.1.56"
serde = { version = "1.0.148", features = ["derive"] }
klyra-service = { path = "../../service", version = "0.26.0" }
