[package]
# TODO: remove me from klyra repo after 0.28.0
name = "klyra-static-folder"
version = "0.28.0"
edition = "2021"
license = "Apache-2.0"
description = "Plugin to get a static folder at runtime on klyra"
keywords = ["klyra-service", "static-folder"]

[dependencies]
async-trait = "0.1.56"
serde = { version = "1.0.148", features = ["derive"] }
klyra-service = { path = "../../service", version = ">=0.27.0, <0.31.0" }
