[package]
name = "klyra-actix-web"
version = "0.42.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run an actix webserver on klyra"
keywords = ["klyra-service", "actix"]

[workspace]

[dependencies]
actix-web = { version = "4.3.1" }
klyra-runtime = { path = "../../runtime", version = "0.42.0", default-features = false }
num_cpus = "1.15.0"

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
