[package]
name = "klyra-actix-web"
version = "0.47.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run an actix webserver on klyra"
repository = "https://github.com/klyra-hq/klyra"
keywords = ["klyra-service", "actix"]

[workspace]

[dependencies]
actix-web = "4.3.1"
num_cpus = "1.15.0"
klyra-runtime = { path = "../../runtime", version = "0.47.0", default-features = false }
