[package]
name = "klyra-axum"
version = "0.27.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run an axum webserver on klyra"
keywords = ["klyra-service", "axum"]

[workspace]

[dependencies]
axum = { version = "0.6.10" }
klyra-runtime = { path = "../../runtime", version = "0.27.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
