[package]
name = "klyra-axum"
version = "0.50.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run an axum webserver on klyra"
repository = "https://github.com/klyra-hq/klyra"
keywords = ["klyra-service", "axum"]

[workspace]

[dependencies]
axum = { version = "0.7.3", optional = true }
axum-0-6 = { package = "axum", version = "0.6.13", optional = true }
klyra-runtime = { path = "../../runtime", version = "0.50.0", default-features = false }

[features]
default = ["axum"]

axum-0-6 = ["dep:axum-0-6"]
