[package]
name = "klyra-axum"
version = "0.53.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run an axum webserver on klyra"
repository = "https://github.com/klyra-hq/klyra"
keywords = ["klyra-service", "axum"]

[workspace]

[dependencies]
axum = { version = "0.8.1", optional = true }
axum-0-7 = { package = "axum", version = "0.7.3", optional = true }
klyra-runtime = { path = "../../runtime", version = "0.53.0", default-features = false }

[features]
default = ["axum"]

axum-0-7 = ["dep:axum-0-7"]
