[package]
name = "klyra-next"
version = "0.40.0"
edition = "2021"
license = "Apache-2.0"
description = "Macros and aliases to deploy wasm on the klyra platform (https://www.klyra.rs/)"
homepage = "https://www.klyra.rs"

[workspace]

[lib]

[dependencies]
# most axum features can be enabled, but "tokio" and "ws" depend on socket2
# via "hyper/tcp" which is not compatible with wasi
axum = { version = "0.6.0", default-features = false }
futures-executor = "0.3.21"
http = "0.2.7"
rmp-serde = "1.1.1"
tower-service = "0.3.1"
klyra-common = { path = "../../common", version = "0.40.0", features = ["wasm"] }
klyra-codegen = { path = "../../codegen", version = "0.40.0", features = ["next"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry"] }
