[package]
name = "klyra-poem"
version = "0.35.1"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a poem webserver on klyra"
keywords = ["klyra-service", "poem"]

[workspace]

[dependencies]
poem = { version = "1.3.55" }
klyra-runtime = { path = "../../runtime", version = "0.35.1", default-features = false }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
