[package]
name = "klyra-poem"
version = "0.44.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a poem webserver on klyra"
repository = "https://github.com/klyra-hq/klyra"
keywords = ["klyra-service", "poem"]

[workspace]

[dependencies]
poem = "3.0.0"
klyra-runtime = { path = "../../runtime", version = "0.44.0", default-features = false }
