[package]
name = "klyra-poise"
version = "0.36.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a poise discord bot on klyra"
keywords = ["klyra-service", "poise", "discord-bot", "serenity"]

[workspace]

[dependencies]
poise = { version = "0.5.2" }
klyra-runtime = { path = "../../runtime", version = "0.36.0", default-features = false }

[dev-dependencies]
klyra-secrets = { path = "../../resources/secrets" }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
