[package]
name = "klyra-poise"
version = "0.37.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a poise discord bot on klyra"
keywords = ["klyra-service", "poise", "discord-bot", "serenity"]

[workspace]

[dependencies]
poise = "0.5.2"
klyra-runtime = { path = "../../runtime", version = "<=0.40.0", default-features = false }
