[package]
name = "klyra-rama"
version = "0.54.0"
edition = "2024"
license = "Apache-2.0"
description = "Service implementation to run a rama server on klyra"
repository = "https://github.com/klyra-hq/klyra"
keywords = ["klyra-service", "rama"]

[dependencies]
rama = { version = "0.2", features = ["tcp", "http-full"] }
klyra-runtime = { path = "../../runtime", version = "0.54.0", default-features = false }

[features]
default = []
