[package]
name = "klyra-salvo"
version = "0.36.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a salvo webserver on klyra"
keywords = ["klyra-service", "salvo"]

[workspace]

[dependencies]
salvo = { version = "0.63.0" }
klyra-runtime = { path = "../../runtime", version = "0.36.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
