[package]
name = "klyra-salvo"
version = "0.52.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a salvo webserver on klyra"
repository = "https://github.com/klyra-hq/klyra"
keywords = ["klyra-service", "salvo"]

[workspace]

[dependencies]
salvo = "0.75.0"
klyra-runtime = { path = "../../runtime", version = "0.52.0", default-features = false }
