[package]
name = "klyra-serenity"
version = "0.21.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a serenity server on klyra"
keywords = ["klyra-service", "serenity"]

[workspace]

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
klyra-runtime = { path = "../../runtime", version = "0.21.0" }

[dev-dependencies]
anyhow = "1.0.69"
klyra-secrets = { path = "../../resources/secrets" }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
