[package]
name = "klyra-thruster"
version = "0.26.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a thruster webserver on klyra"
keywords = ["klyra-service", "thruster"]

[workspace]

[dependencies]
thruster = { version = "1.3.0" }
klyra-runtime = { path = "../../runtime", version = "0.26.0", default-features = false }

[dev-dependencies]
thruster = { version = "1.3.0", features = ["hyper_server"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
